--- a/style2.css
+++ b/style2.css
@@ -158,7 +158,7 @@ input[type="text"].error {
 }
 
 input[type=text] {
-  width: 130px;
+  width: 60%;
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
@@ -251,6 +251,15 @@ input[type=text] {
 input[type=text]:focus {
   width: 25%;
   }
+  
+.fa.fa-bars {
+  display: none;
+  //visibility: hidden;
+}
+  
+input[type=text] {
+width: 130px;  
+}
   
 .box {
     width: 50%;
